deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/simplesamlphp-reference-idp-hosted.html
+++ b/devel/simplesamlphp-reference-idp-hosted.html
@@ -437,16 +437,7 @@ entry matches.
     <code>
      base64
     </code>
-    : Store the attribute as a base64 encoded string. This
-      is the default when the
-    <code>
-     base64attributes
-    </code>
-    -option is set to
-    <code>
-     TRUE
-    </code>
-    .
+    : Store the attribute as a base64 encoded string.
    </li>
   </ul>
  </dd>
