--- a/devel/simplesamlphp-reference-sp-remote.html
+++ b/devel/simplesamlphp-reference-sp-remote.html
@@ -197,19 +197,6 @@ Both files have the following format:
  </dd>
  <dt>
   <code>
-   base64attributes
-  </code>
- </dt>
- <dd>
-  Whether attributes sent to this SP should be base64 encoded. The
-  default is
-  <code>
-   FALSE
-  </code>
-  .
- </dd>
- <dt>
-  <code>
    description
   </code>
  </dt>
@@ -375,16 +362,7 @@ Both files have the following format:
     <code>
      base64
     </code>
-    : Store the attribute as a base64 encoded string. This
-      is the default when the
-    <code>
-     base64attributes
-    </code>
-    -option is set to
-    <code>
-     TRUE
-    </code>
-    .
+    : Store the attribute as a base64 encoded string.
    </li>
   </ul>
  </dd>
