--- a/devel/simplesamlphp-upgrade-notes-2.0.html
+++ b/devel/simplesamlphp-upgrade-notes-2.0.html
@@ -280,6 +280,10 @@ deprecated
  <li>
   admin.protectindexpage. Replaced by the admin module which always requires login.
  </li>
+ <li>
+  base64attributes. Obsolete functionality, individual attributes can still be en/decoded
+  with the existing attributeencodings feature.
+ </li>
 </ul>
 <h2 id="changes-relevant-for-module-developers">
  Changes relevant for (module) developers
