deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/simplesamlphp-install-repo.html
+++ b/devel/simplesamlphp-install-repo.html
@@ -123,8 +123,11 @@
 </p>
 <div class="codehilite">
  <pre><span></span><code><span class="nb">cd</span> /var/simplesamlphp
-cp -r config-templates/* config/
-cp -r metadata-templates/* metadata/
+cp config/config.php.dist config/config.php
+cp config/authsources.php.dist config/authsources.php
+cp metadata/saml20-idp-hosted.php.dist metadata/saml20-idp-hosted.php
+cp metadata/saml20-idp-remote.php.dist metadata/saml20-idp-remote.php
+cp metadata/saml20-sp-remote.php.dist metadata/saml20-sp-remote.php
 </code></pre>
 </div>
 <p>
