--- a/devel/simplesamlphp-install.html
+++ b/devel/simplesamlphp-install.html
@@ -451,13 +451,10 @@ upgrade notes), you may have to update your configuration and metadata after upd
  </code>
  file and the new
  <code>
-  config.php
+  config.php.dist
  </code>
- file located in
- <code>
-  config-templates/config.php
- </code>
- , and apply relevant modifications to the new template. This will ensure that all new
+ file located
+the same directory, and apply relevant modifications to the new template. This will ensure that all new
 entries in the latest version of config.php are included, as well as preserve your local modifications.
 </p>
 <h3 id="upgrading-metadata-files">
