--- a/devel/simplesamlphp-upgrade-notes-2.0.html
+++ b/devel/simplesamlphp-upgrade-notes-2.0.html
@@ -247,7 +247,7 @@ For example, to use the LDAP module:
  Quite some options have been changed or removed. We recommend to start with a fresh
 template from
  <code>
-  config-templates/
+  config/config.php.dist
  </code>
  and migrate the settings you require to the new
 config file manually.
