deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/cron/cron.html
+++ b/devel/cron/cron.html
@@ -174,7 +174,7 @@ panel to trigger jobs manually.
 <div class="codehilite">
  <pre><span></span><code><span class="o">[</span>root@simplesamlphp<span class="o">]</span> <span class="nb">cd</span> /var/simplesamlphp
 <span class="o">[</span>root@simplesamlphp simplesamlphp<span class="o">]</span> touch modules/cron/enable
-<span class="o">[</span>root@simplesamlphp simplesamlphp<span class="o">]</span> cp modules/cron/config-templates/*.php config/
+<span class="o">[</span>root@simplesamlphp simplesamlphp<span class="o">]</span> cp modules/cron/config/module_cron.php.dist config/module_cron.php
 </code></pre>
 </div>
 <h2 id="configuring-the-cron-module">
