deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/simplesamlphp-theming.html
+++ b/devel/simplesamlphp-theming.html
@@ -334,7 +334,7 @@ The class can then modify the Twig Environment and the variables passed to the t
 </h2>
 <p>
  For existing themes that have been created before SimpleSAMLphp 2.0, you may need to upgrade them to the Twig
-templating enging to be compatible with SimpleSAMLphp 2.0.
+templating engine to be compatible with SimpleSAMLphp 2.0.
 </p>
 <p>
  Twig works by extending a base template, which can itself include other partial templates. Some of the content of the old
