deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/contrib_modules/consent/consent.html
+++ b/contrib_modules/consent/consent.html
@@ -433,11 +433,12 @@ database.
  </dt>
  <dd>
   Whether we will show a link to more information about the service from the
-  no consent page (configured in the SP metadata as
+  no consent page (configured in the SP metadata as the MDUI
   <code>
-   url.about
+   InformationURL
   </code>
-  ). Defaults to
+  ).
+  Defaults to
   <code>
    true
   </code>
