--- a/devel/index.html
+++ b/devel/index.html
@@ -135,6 +135,12 @@
     </a>
    </li>
    <li>
+    <a href="simplesamlphp-sp-api.html">
+     SP API reference (for your application)
+    </a>
+    .
+   </li>
+   <li>
     <a href="./simplesamlphp-artifact-sp.html">
      Configuring HTTP-Artifact
     </a>
