--- a/devel/simplesamlphp-maintenance.html
+++ b/devel/simplesamlphp-maintenance.html
@@ -90,11 +90,6 @@
 </header><main><h1 id="simplesamlphp-maintenance">
  SimpleSAMLphp Maintenance
 </h1>
-<!--
-  This file is written in Markdown syntax.
-  For more information about how to use the Markdown syntax, read here:
-  http://daringfireball.net/projects/markdown/syntax
--->
 <div class="toc">
  <ul>
   <li>
@@ -227,7 +222,7 @@
 </p>
 <ul>
  <li>
-  <a href="http://simplesamlphp.org/docs">
+  <a href="https://simplesamlphp.org/docs">
    SimpleSAMLphp documentation
   </a>
  </li>
@@ -239,11 +234,6 @@
  <li>
   <a href="https://simplesamlphp.org/lists">
    SimpleSAMLphp mailing lists
-  </a>
- </li>
- <li>
-  <a href="https://twitter.com/simplesamlphp">
-   SimpleSAMLphp in twitter
   </a>
  </li>
 </ul>
@@ -764,7 +754,7 @@ and override the methods needed to change the backend used. This class
  </strong>
  also be located in the
  <code>
-  lib/MetadataStore/
+  src/MetadataStore/
  </code>
  directory of your custom module.
 </p>
