--- a/devel/simplesamlphp-authproc.html
+++ b/devel/simplesamlphp-authproc.html
@@ -296,8 +296,12 @@
  <code>
   core
  </code>
- module, but there are
-many others publised as [SimpleSAMLphp modules)[https://simplesamlphp.org/modules/] you can install. Beyond that, you are
+ and
+ <code>
+  saml
+ </code>
+ modules, but there are
+many others published as [SimpleSAMLphp modules)[https://simplesamlphp.org/modules/] you can install. Beyond that, you are
 encouraged to create your own filters and share with the community. If you have
 created a cool
  <em>
