deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/simplesamlphp-reference-idp-hosted.html
+++ b/devel/simplesamlphp-reference-idp-hosted.html
@@ -141,7 +141,7 @@
   metadata/saml20-idp-hosted.php
  </code>
  .
-Both files have the following format:
+The file has the following format:
 </p>
 <div class="codehilite">
  <pre><span></span><code><span class="cp">&lt;?php</span>
