--- a/devel/simplesamlphp-reference-sp-remote.html
+++ b/devel/simplesamlphp-reference-sp-remote.html
@@ -142,8 +142,7 @@
  <code>
   metadata/saml20-sp-remote.php
  </code>
- .
-Both files have the following format:
+ . The file has the following format:
 </p>
 <div class="codehilite">
  <pre><span></span><code><span class="cp">&lt;?php</span>
