deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/multiauth/multiauth.html
+++ b/devel/multiauth/multiauth.html
@@ -198,10 +198,7 @@ is the one that decides which one to use.
 sources defined in the authsources.php configuration file. The
 values are arrays with information used to create the user
 interface that will let the user select the authentication source
-he wants. Older versions of the multiauth module did not have
-this structure and just have the authsources identifiers as the
-values of the sources array. It has been improved in a backwards
-compatible fashion so both cases should work.
+they want.
 </p>
 <p>
  Each source in the sources array has a key and a value. As
