--- a/devel/multiauth/multiauth.html
+++ b/devel/multiauth/multiauth.html
@@ -147,7 +147,7 @@ authentication source:
                   'en' =&gt; 'Log in using a SAML SP',
                   'es' =&gt; 'Entrar usando un SP SAML',
               ],
-              'css-class' =&gt; 'SAML',
+              'css_class' =&gt; 'SAML',
               'AuthnContextClassRef' =&gt; ['urn:oasis:names:tc:SAML:2.0:ac:classes:SmartcardPKI', 'urn:oasis:names:tc:SAML:2.0:ac:classes:MobileTwoFactorContract'],
           ],
           'example-admin' =&gt; [
@@ -203,11 +203,11 @@ they want.
 <p>
  Each source in the sources array has a key and a value. As
 mentioned above the key is the authsource identifier and the value
-is another array with optional keys: 'text', 'css-class', 'help', and 'AuthnContextClassRef'.
+is another array with optional keys: 'text', 'css_class', 'help', and 'AuthnContextClassRef'.
 The text element is another array with localized strings for one
 or more languages. These texts will be shown in the selectsource.php
 view. Note that you should at least enter the text in the default
-language as specified in your config.php file. The css-class
+language as specified in your config.php file. The css_class
 element is a string with the css class that will be applied to
 the &lt;li&gt; element in the selectsource.php view. By default the
 authtype of the authsource is used as the css class with colons
