--- a/devel/simplesamlphp-modules.html
+++ b/devel/simplesamlphp-modules.html
@@ -361,7 +361,7 @@ directories and files:
   .
  </dd>
  <dt>
-  www
+  public
  </dt>
  <dd>
   All files stored in this directory will be available by
@@ -376,7 +376,7 @@ directories and files:
   </code>
   is stored in
   <code>
-   modules/example/www/
+   modules/example/public/
   </code>
   , it can be accessed by the URL
   <code>
@@ -397,7 +397,7 @@ directories and files:
   .
   This function will then return a URL to the given file in the
   <code>
-   www
+   public
   </code>
   -directory of
   <code>
