--- a/devel/simplesamlphp-theming.html
+++ b/devel/simplesamlphp-theming.html
@@ -263,7 +263,7 @@ mkdir<span class="w"> </span>-p<span class="w"> </span>themes/fancytheme/default
 <p>
  You can put resource files within the
  <code>
-  www/assets
+  public/assets
  </code>
  folder of your module, to make your module completely independent with included css, icons etc.
 </p>
@@ -272,7 +272,7 @@ mkdir<span class="w"> </span>-p<span class="w"> </span>themes/fancytheme/default
 └───mymodule
     └───lib
     └───themes
-    └───www
+    └───public
         └───assets
             └───logo.svg
             └───style.css
@@ -386,11 +386,11 @@ If you want to use the
  </code>
  function, you need to move the asserts from
  <code>
-  www/
+  public/
  </code>
  to
  <code>
-  www/assets/
+  public/assets/
  </code>
  .
 </p>
