--- a/devel/simplesamlphp-upgrade-notes-2.0.html
+++ b/devel/simplesamlphp-upgrade-notes-2.0.html
@@ -308,7 +308,7 @@ deprecated
 </h2>
 <p>
  The following changes are relevant for those having custom developed modules, authentication
-processing filters or interface with the SimpleSAMLphp development API.
+processing filters, themes, or interface with the SimpleSAMLphp development API.
 </p>
 <ul>
  <li>
