deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/simplesamlphp-upgrade-notes-2.0.html
+++ b/devel/simplesamlphp-upgrade-notes-2.0.html
@@ -250,6 +250,23 @@ deprecated
  format.
 </p>
 <p>
+ The format of the
+ <code>
+  NameIDPolicy
+ </code>
+ option has been changed: to omit sending the
+element entirely, you can no longer specify
+ <code>
+  false
+ </code>
+ but need to set it to
+an empty array (
+ <code>
+  []
+ </code>
+ ).
+</p>
+<p>
  Configuration options that have been removed:
 </p>
 <ul>
