--- a/devel/simplesamlphp-install-repo.html
+++ b/devel/simplesamlphp-install-repo.html
@@ -93,14 +93,6 @@
 <p>
  These are some notes about running SimpleSAMLphp from the repository.
 </p>
-<h2 id="prerequisites">
- Prerequisites
-</h2>
-<ul>
- <li>
-  NodeJS version &gt;= 10.0.
- </li>
-</ul>
 <h2 id="installing-from-git">
  Installing from git
 </h2>
@@ -136,18 +128,10 @@ cp<span class="w"> </span>metadata/saml20-sp-remote.php.dist<span class="w"> </s
   getcomposer.org
  </a>
  to get detailed
-instructions on how to install Composer itself) and npm:
+instructions on how to install Composer itself):
 </p>
 <div class="codehilite">
  <pre><span></span><code>php<span class="w"> </span>composer.phar<span class="w"> </span>install
-npm<span class="w"> </span>install
-</code></pre>
-</div>
-<p>
- Build the assets:
-</p>
-<div class="codehilite">
- <pre><span></span><code>npm<span class="w"> </span>run<span class="w"> </span>build
 </code></pre>
 </div>
 <h2 id="upgrading">
@@ -169,12 +153,10 @@ git<span class="w"> </span>pull<span class="w"> </span>origin<span class="w"> </
 </code></pre>
 </div>
 <p>
- Install or upgrade the external dependencies with Composer and npm:
+ Install or upgrade the external dependencies with Composer:
 </p>
 <div class="codehilite">
  <pre><span></span><code>php<span class="w"> </span>composer.phar<span class="w"> </span>install
-npm<span class="w"> </span>install
-npm<span class="w"> </span>run<span class="w"> </span>build
 </code></pre>
 </div></main></body>
 </html>
