deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/saml/sp.html
+++ b/devel/saml/sp.html
@@ -686,7 +686,7 @@ The following attributes are available:
  </dd>
  <dd>
   Note that this option can be set for each IdP in the
-  <a href="./simplesamlphp-reference-idp-remote.html">
+  <a href="../simplesamlphp-reference-idp-remote.html">
    IdP-remote metadata
   </a>
   .
@@ -812,7 +812,7 @@ The following attributes are available:
  </dd>
  <dd>
   Note that this option can be set for each IdP in the
-  <a href="./simplesamlphp-reference-idp-remote.html">
+  <a href="../simplesamlphp-reference-idp-remote.html">
    IdP-remote metadata
   </a>
   .
@@ -958,7 +958,7 @@ The following attributes are available:
  </dt>
  <dd>
   Allows to specify information about the registrar of this SP. Please refer to the
-  <a href="./simplesamlphp-metadata-extensions-rpi.html">
+  <a href="../simplesamlphp-metadata-extensions-rpi.html">
    MDRPI extension
   </a>
   document for further information.
