deploy: bb631f6fd9e9a0f3bcdd02cd80029d096ce95cda

--- a/devel/saml/sp.html
+++ b/devel/saml/sp.html
@@ -838,7 +838,7 @@ The following attributes are available:
   </code>
  </dt>
  <dd>
-  The format of the NameID we request from the IdP in the Authentiction Request:
+  The format of the NameID we request from the IdP in the AuthnRequest:
   an array in the form of
   <code>
    [ 'Format' =&gt; the format, 'AllowCreate' =&gt; true or false ]
